--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <link href="./css/flexslider.css" rel="stylesheet" type="text/css" />
 
   <!-- jQuery 라이브러리 -->
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
   <!-- flexslide script -->
   <script src="./script/jquery.flexslider.js"></script>
